Fix text wrap

--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ body {
   }
 
   .picture-container > .name {
-    width: 700px;
+    width: 450px;
     font-size: min(calc(-1.2rem + 10vw), 4.3rem);
     text-wrap:initial;
     position: absolute;
